Make a compose file properly this time?

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,8 +1,11 @@
-web:
-  image: nginx:alpine-slim
-  volumes:
-   - /srv:/usr/share/nginx/html
-   - ../nginx:/etc/nginx:ro
-  ports:
-   - "80:80"
-   - "443:443"
+version: "3.9"
+
+services:
+  web:
+    image: nginx:alpine-slim
+    volumes:
+     - /srv:/usr/share/nginx/html
+     - ../nginx:/etc/nginx:ro
+    ports:
+     - "80:80"
+     - "443:443"
