--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,17 @@
-version: "3.9"
+version: "3"
 
 services:
   web:
-    image: nginx:alpine-slim
+    image: nginx:alpine
     volumes:
-     - /srv:/usr/share/nginx/html
-     - ../nginx:/etc/nginx:ro
+      - /srv:/usr/share/nginx/html
+      - /root/ops/nginx:/etc/nginx:ro
+     
+  proxy:
+    image: traefik:latest
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+    command: --api.insecure=true --providers.docker
     ports:
-     - "80:80"
-     - "443:443"
+      - "80:80"
+      - "8080:8080"
