--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,12 @@ services:
     volumes:
       - ./conf/nginx:/etc/nginx
       - /srv:/usr/share/nginx/html
-    ports:
-      - "80:80"
-     
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.web.tls=true"
+      - "traefik.http.routers.web.tls.certresolver=lets-encrypt"
+      - "traefik.http.routers.web.rule=Host('lola.aidhan.net')"
+
   proxy:
     image: traefik:latest
     volumes:
@@ -16,4 +19,6 @@ services:
     - /var/run/docker.sock:/var/run/docker.sock:ro
     command: --api.insecure=true --providers.docker
     ports:
+      - "80:80"
+      - "443:443"
       - "8080:8080"
