--- a/conf/traefik/traefik.toml
+++ b/conf/traefik/traefik.toml
@@ -16,4 +16,6 @@
 [certificatesResolvers.lets-encrypt.acme]
   storage = "/etc/traefik/certs/all.json"
   email = "admin@aidhan.net"
-  [certificatesResolvers.lets-encrypt.acme.tlsChallenge]
+  [certificatesResolvers.lets-encrypt.acme.dnsChallenge]
+    # used during the challenge
+    entryPoint = "web"
