--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,14 @@ services:
     volumes:
       - ./conf/nginx:/etc/nginx
       - /srv:/usr/share/nginx/html
+    ports: 
+      - "80:80"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.web.tls=true"
       - "traefik.http.routers.web.tls.certresolver=lets-encrypt"
       - "traefik.http.routers.web.rule=Host(`lola.aidhan.net`)"
+   
 
   proxy:
     image: traefik:latest
@@ -19,6 +22,5 @@ services:
     - /var/run/docker.sock:/var/run/docker.sock:ro
     command: --api.insecure=true --providers.docker
     ports:
-      - "80:80"
       - "443:443"
       - "8080:8080"
