--- a/conf/traefik/traefik.yml
+++ b/conf/traefik/traefik.yml
@@ -9,7 +9,7 @@ entryPoints:
     address: ":443"
     http:
       tls:
-        certResolver: letsencrypt-staging
+        certResolver: letsencrypt
     http3: {}
 
 
