--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
      - "./conf/nginx:/etc/nginx"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.web.rule=Host(`nginx.aidhan.me`)"
+      - "traefik.http.routers.nginx.rule=Host(`nginx.aidhan.me`)"
 
   caddy:
     container_name: "caddy"
@@ -22,7 +22,7 @@ services:
      - "./conf/caddy/Caddyfile:/etc/caddy/Caddyfile"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`caddy.aidhan.me`)"
+      - "traefik.http.routers.caddy.rule=Host(`caddy.aidhan.me`)"
 
   proxy:
     container_name: "traefik"
