--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,8 @@ services:
      - "443:443"
      - "8080:8080"
 
-  #php:
-  #  image: php:fpm-alpine
+  php:
+    image: php:fpm-alpine
 
   #sqldb:
   #  image: postgres:alpine
