Updated some configurations

--- a/conf/caddy/Caddyfile
+++ b/conf/caddy/Caddyfile
@@ -1,9 +1,4 @@
-{
-    auto_https off
-}
-
 caddy.aidhan.me {
-    root * /srv/public
-    php_fastcgi php:9000
+    root * /var/www/html
     file_server browse
 }
