Update to better support PHP in Caddy

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -49,6 +49,10 @@ services:
   php:
     image: php:fpm-alpine
     restart: always
+    ports:
+      - "9000:9000"
+    volumes:
+      - /srv:/srv
     networks:
       - web
       - db
