Maybe try this?

--- a/conf/caddy/Caddyfile
+++ b/conf/caddy/Caddyfile
@@ -5,9 +5,9 @@
 
 aidhan.net,
 www.aidhan.net {
-    root * /srv
-    
+    root /srv
     encode zstd gzip
-    php_fastcgi php:9000
+
     file_server
+    php_fastcgi php:9000
 }
