--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - "443:443"
       - "443:443/udp"
     volumes:
-      - /srv:/var/www/html
+      - /srv:/srv
       - caddy_data:/data
       - ../conf/caddy:/etc/caddy
     networks:
@@ -52,7 +52,7 @@ services:
     restart: always
     user: www-data
     volumes:
-      - /srv:/var/www/html
+      - /srv:/srv
     networks:
       - web
       - db
