--- a/conf/nginx/conf.d/default.conf
+++ b/conf/nginx/conf.d/default.conf
@@ -3,13 +3,6 @@ server {
     listen [::]:80;
     server_name localhost;
 
-    root /usr/share/nginx/html;
+    root /srv/public;
     index index.html index.htm;
 
-    #location ~ \.php$ {
-    #    fastcgi_pass php:9000;
-    #    fastcgi_index index.php;
-    #    fastcgi_param  SCRIPT_FILENAME /scripts$fastcgi_script_name;
-    #    include fastcgi_params;
-    #}
-}
