--- a/conf/nginx/conf.d/aidhan.net.conf
+++ b/conf/nginx/conf.d/aidhan.net.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name aidhan.net www.aidhan.net;
+    server_name aidhan.net .aidhan.net;
 
     return 301 https://$server_name$request_uri;
 }
@@ -14,6 +14,10 @@ server {
 
     index index.php index.html;
     try_files $uri $uri/ /index.php?$args; # Magic sauce
+
+    if ($host != $server_name) {
+        return 301 https://$server_name$request_uri;
+    }
 
     ssl_certificate /etc/letsencrypt/live/aidhan.net/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/aidhan.net/privkey.pem;
