--- a/conf/nginx/conf.d/default.conf
+++ b/conf/nginx/conf.d/default.conf
@@ -3,6 +3,5 @@ server {
     listen [::]:80;
     server_name localhost;
 
-    root /srv/public;
-    index index.html index.htm;
+    return 302 https://aidhan.net/;
 }
