--- a/conf/nginx/conf.d/aidhan.net.conf
+++ b/conf/nginx/conf.d/aidhan.net.conf
@@ -25,3 +25,22 @@ server {
     include partials/ssl;
     include partials/php;
 }
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name auth.aidhan.net kratos.aidhan.net;
+
+    location / {
+        proxy_pass http://kratos:4433;
+    }
+
+    location /admin {
+        proxy_pass http://kratos:4434;
+    }
+
+    ssl_certificate /etc/letsencrypt/live/aidhan.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/aidhan.net/privkey.pem;
+
+    include partials/ssl;
+}
